tests/snapshots/assets__check_file@unit-code-single-arg-closure.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/single-arg-closure.typ
---
#{
  let row_len = 10
  let hlines = (
    (
      h: 1,
      y: 1,
    ),
    (
      h: 2,
      y: 2,
    ),
  )
  let new_hlines = range(
    0,
    row_len + 1,
  ).filter(y => (
    hlines.filter(h => (
      h.y == y
    )).len() == 0
  ))
  new_hlines
}
