tests/snapshots/assets__check_file@unit-code-single-elem-destruct.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/single-elem-destruct.typ
---
#let (num,) = (1,)

#num

#let (((num,),),) = (((1,),),)

#num

#let (_,) = (((1,),),)

#let ((num),) = (1,)
#num
