tests/snapshots/assets__check_file@unit-comment-block-align.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/block-align.typ
snapshot_kind: text
---
something0 /*
 1234567890
  1234567890
*/

something1 /*
 1234567890
  1234567890
     */

something2 /*
 * 1234567890
*/

something3 /*
 * 1234567890
     */

something4 /*
 * 1234567890
*/ ffhgfg

#[
  something0 /*
 1234567890
  1234567890
*/

  something1 /*
 1234567890
  1234567890
     */

  something2 /*
 * 1234567890
*/

  something3 /*
 * 1234567890
     */

  something4 /*
 * 1234567890
*/ ffhgfg
]

#{
  "something0" /*
                1234567890
                 1234567890
               */

  "something1" /*
               1234567890
                1234567890
                   */

  "something2" /*
                * 1234567890
                */

  "something3" /*
                * 1234567890
                */
}
