tests/snapshots/assets__check_file@unit-comment-block-comment-align.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/block-comment-align.typ
snapshot_kind: text
---
 something0 /*
 1234567890
  1234567890
*/

something1 /*
 1234567890
  1234567890
     */

something2 /*
 * 1234567890
*/

something3 /*
 * 1234567890
     */

something4 /*
 * 1234567890
*/ ffhgfg

#[
  something0 /*
 1234567890
  1234567890
*/

  something1 /*
 1234567890
  1234567890
     */

  something2 /*
 * 1234567890
*/

  something3 /*
 * 1234567890
     */

  something4 /*
 * 1234567890
*/ ffhgfg
]

#{
  "something0" /*
                1234567890
                 1234567890
               */

  "something1" /*
               1234567890
                1234567890
                   */

  "something2" /*
                * 1234567890
                */

  "something3" /*
                * 1234567890
                */
}
